--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,17 +3,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Art Around the World</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <div class="wrapper">
         <div class="nav-header">
-            <div class="nav-title">Art Around the World</div>
-            <div class="nav-site1">Historical Art</div>
-            <div class="nav-site2">Your Art</div>
-            <div class="nav-site3">Share</div>
-            <div class="nav-site4">About Us</div>
+            <div class="nav-title">
+                <a class="one" href="{{ url_for('home') }}">Art Around the World</a>
+            </div>
+            <div class="nav-site1">
+                <a class="one" href="{{ url_for('historical_art') }}">Historical Art</a>
+            </div>
+            <div class="nav-site2">
+                <a class="one" href="{{ url_for('user_art') }}">Your Art</a>
+            </div>
+            <div class="nav-site3">
+                <a class="one" href="{{ url_for('share') }}">Share</a>
+            </div>
+            <div class="nav-site4">
+                <a class="one" href="{{ url_for('about_us') }}">About Us</a>
+            </div>
         </div>
         <div class="content">
             {% block content %}
