--- a/static/main.css
+++ b/static/main.css
@@ -46,3 +46,110 @@
     grid-column: 7;
     grid-row: 1;
 }
+
+a.one:link{
+    color:black;
+    text-decoration: none;
+}
+
+a.one:visited{
+    color:navy;
+    text-decoration: none;
+}
+
+.banner-home{
+    text-align: center;
+    font-size: 48px;
+    padding: 100px;
+    width: auto;
+    height: 100px;
+    background-image: url(../static/banner/thetriumphofcamillus.jpg);
+    background-color: purple;
+    background-position: center;
+    color: white;
+}
+
+.banner-historical{
+    text-align: center;
+    font-size: 48px;
+    padding: 100px;
+    width: auto;
+    height: 100px;
+    background-image: url(../static/banner/fantasticlandscapewithfigures.jpg);
+    background-color: purple;
+    background-position: center;
+    color: white;
+}
+
+.banner-user{
+    text-align: center;
+    font-size: 48px;
+    padding: 100px;
+    width: auto;
+    height: 100px;
+    background-image: url(../static/banner/stjamesstreet.jpg);
+    background-color: purple;
+    background-position: center;
+    color: white;
+}
+
+.banner-share{
+    text-align: center;
+    font-size: 48px;
+    padding: 100px;
+    width: auto;
+    height: 100px;
+    background-image: url(../static/banner/cartephotographiquedelaluneplancheiv.jpg);
+    background-color: purple;
+    background-position: center;
+    color: white;
+}
+
+.banner-aboutus{
+    text-align: center;
+    font-size: 48px;
+    padding: 100px;
+    width: auto;
+    height: 100px;
+    background-image: url(../static/banner/orangepackingatredlands.jpg);
+    background-color: purple;
+    background-position: center;
+    color: white;
+}
+
+.entry{
+    text-align: center;
+    display: grid;
+    padding: 80px;
+    grid-template-columns: 2fr 2fr;
+    grid-auto-rows: minmax(1em, auto);
+    grid-gap: 1em;
+}
+
+.entry-art{
+    text-align: right;
+    padding: 40px;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.artwork{
+    max-width:800px
+}
+
+.entry-text{
+    text-align: left;
+    padding-top: 180px;
+    padding-left: 40px;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.artwork-title{
+    font-size: 20;
+}
+
+.artwork-artist{
+    font-size: 16;
+    font-style: italic;
+}
