--- a/templates/share.html
+++ b/templates/share.html
@@ -3,4 +3,54 @@
     <div class="banner-share">
         Add Your Art to Our Collection
     </div>
+    <form method="POST" action="" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <fieldset>
+            <legend>Account Info</legend>
+            <div>
+                {{ form.picture.label }}
+                {% if form.picture.errors  %}
+                    {{ form.picture }}
+                    <div>
+                        {% for error in form.picture.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.picture }}
+                {% endif %}
+            </div>
+            <div>
+                {{ form.title.label }}
+                {% if form.title.errors  %}
+                    {{ form.title }}
+                    <div>
+                        {% for error in form.title.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.title }}
+                {% endif %}
+            </div>
+            <div>
+                {{ form.artist.label }}
+                {% if form.artist.errors  %}
+                    {{ form.artist }}
+                    <div>
+                        {% for error in form.artist.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.artist }}
+                {% endif %}
+            </div>
+
+        </fieldset>
+        <div>
+            {{ form.submit }}
+        </div>
+
+    </form>
 {% endblock content %}
